# smartdeploy-example

./: .env  .gitignore  Cargo.toml  README.md  build_and_deploy_contract_a.sh  build_and_deploy_correct_vanilla.sh  build_and_deploy_dev_deploy_contract_a.sh  build_and_deploy_vanilla.sh  build_and_redeploy_contract_a.sh  build_and_redeploy_dev_deploy_contract_a.sh  invoke_vanilla.sh  justfile
.cargo/: config.toml
contracts/contract_a/: Cargo.toml
contracts/contract_a/src/: lib.rs
contracts/contract_b/: Cargo.toml
contracts/contract_b/src/: lib.rs
contracts/correct_vanilla_contract_a/: Cargo.toml
contracts/dev_deploy_contract_a/: Cargo.toml
contracts/dev_deploy_contract_a/src/: lib.rs
contracts/redeploy_correct_vanilla_contract_a/: Cargo.toml
contracts/redeploy_correct_vanilla_contract_a/src/: lib.rs
contracts/vanilla_contract_a/: Cargo.toml
contracts/vanilla_contract_a/src/: lib.rs
