[workspace]
resolver = "2"
members = [
    "contracts/*",
]

exclude = [
    "contracts/*",
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies]
smartdeploy-sdk = "0.1.5"
smartdeploy-macros = "0.1.5"
loam-sdk = "0.6.6"
soroban-sdk = "20.1.0"
# soroban-sdk = { package = "loam-soroban-sdk", version = "0.6.4"}
# soroban-sdk = { version = "20.0.0-rc1", features = ["alloc"]}